--- a/Data/Layout/UI/HTML/Form/Password.html
+++ b/Data/Layout/UI/HTML/Form/Password.html
@@ -4,8 +4,8 @@
     <div class="password_box">
         <label for="<k>Name</k>"> <l><k>Name</k></l>:</label>
         <input id="<k>ID</k>" type="password" name="<k>Name</k>" class="<k>Class</k>" value="<k>Value</k>" autocomplete = "off" />
-        <span id="StrengthMeter">0%</span>
     </div>
+    <div id="StrengthMeter"></div>
 </div>
 
 <script type="text/javascript">
