--- a/src/Data/Layout/Main.html
+++ b/src/Data/Layout/Main.html
@@ -8,27 +8,36 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <title></title>
-    <meta name="description" content="">
+    <title>Codeine Site</title>
+    <meta name="description" content="Codeine Site">
     <meta name="author" content="">
 
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
+    <link rel="index" href="/" />
+
 </head>
 
 <body>
-
 <div id="container">
     <header>
-
+        <place>Header</place>
     </header>
-    <div id="main" role="main">
+    <div id="content" role="main">
         <place>Content</place>
     </div>
+    <aside id="sidebar" role="sidebar">
+        <place>Sidebar</place>
+    </aside>
     <footer>
 
     </footer>
 </div>
+
+<!--[if lt IE 7 ]>
+    <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
+    <script>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
+  <![endif]-->
 
 </body>
 </html>
