--- a/src/Data/Template/Layout/Main.html
+++ b/src/Data/Template/Layout/Main.html
@@ -14,24 +14,16 @@
 
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
+    <link rel="stylesheet" href="/Data/CSS/Codeine.css" />
     <link rel="index" href="/" />
 
 </head>
 
 <body>
 <div id="container">
-    <header>
-        <place>Header</place>
-    </header>
     <div id="content" role="main">
         <place>Content</place>
     </div>
-    <aside id="sidebar" role="sidebar">
-        <place>Sidebar</place>
-    </aside>
-    <footer>
-
-    </footer>
 </div>
 
 <!--[if lt IE 7 ]>
