--- a/src/Assets/Code/Documentation/css/ByContract.css
+++ b/src/Assets/Code/Documentation/css/ByContract.css
@@ -1,3 +1,10 @@
+code
+{
+    display: block;
+    padding: 1em;
+    margin: 1em 0 1em 0;
+}
+
 .block
 {
     border: 1px solid #cccccc;
@@ -52,4 +59,10 @@
     color: #FFFFFF;
     padding: 4px 8px 4px 8px;
     border-radius: 4px 4px 4px 4px;
+}
+
+img.icon
+{
+    vertical-align: baseline;
+    margin-bottom: -3px;
 }
