--- a/src/Assets/bootstrap/css/fixes.css
+++ b/src/Assets/bootstrap/css/fixes.css
@@ -34,3 +34,13 @@
     font-variant: small-caps;
     text-transform: lowercase;
 }
+
+.right, .table th.right, .table td.right
+{
+    text-align: right;
+}
+
+.nav
+{
+    margin-bottom: 0;
+}
