--- a/src/Assets/Default/css/Default.css
+++ b/src/Assets/Default/css/Default.css
@@ -101,3 +101,18 @@ tr.Apocalypse, tr.Critical, tr.Emergency
     font-weight: bold;
     float: right;
 }
+
+.Status1, .Status0:hover, .Status-1:hover
+{
+    opacity: 1;
+}
+
+.Status0
+{
+    opacity: 0.5;
+}
+
+.Status-1
+{
+    opacity: 0.25;
+}
