--- a/src/Assets/Default/css/Default.css
+++ b/src/Assets/Default/css/Default.css
@@ -7,6 +7,10 @@
 {
     text-align: center;
 }
+.p
+{
+    margin-bottom: 1em;
+}
 
 .spaced
 {
@@ -15,13 +19,13 @@
 
 .block, .block-bordered
 {
-    padding: 4px 4px 12px 12px;
+    border-radius: 4px;
+    padding: 12px;
     margin: 4px;
 }
 
 .block-bordered
 {
-    border-radius: 4px;
     border: 1px solid #cccccc;
 }
 
@@ -115,4 +119,9 @@ tr.Apocalypse, tr.Critical, tr.Emergency
 .Status-1
 {
     opacity: 0.25;
+}
+
+.no-border, .no-border:hover
+{
+    border: none;
 }
