--- a/src/Assets/Default/css/Default.css
+++ b/src/Assets/Default/css/Default.css
@@ -43,13 +43,14 @@
 {
     font: 14px monospace;
     margin: auto;
-    margin-top: 40px;
-    padding: 0;
+    margin-top: 20px;
+    padding: 4px 16px 4px 16px;
     background-color: white;
     color: black;
     width: 80% !important;
     white-space: pre;
     clear: both;
+    border-radius: 6px;
 }
 
 .console th
