--- a/src/Assets/bootstrap3/css/addons.css
+++ b/src/Assets/bootstrap3/css/addons.css
@@ -31,6 +31,11 @@
     padding: 7px 0;
 }
 
+.spacer
+{
+    padding: 10px 0;
+}
+
 @media screen and (min-width: 1600px) {
     .liquid {
         max-width: 1570px;
