Cosmetic fixes & async.

--- a/src/Assets/bootstrap3/css/addons.css
+++ b/src/Assets/bootstrap3/css/addons.css
@@ -44,6 +44,14 @@
     margin: 3px;
 }
 
+.label-lg
+{
+    font-size: 100%;
+    padding: .6em 1.2em ;
+}
+
+
+
 @media screen and (min-width: 1600px) {
     .liquid {
         max-width: 1570px;
