--- a/src/Assets/View/HTML/Parslets/File.html
+++ b/src/Assets/View/HTML/Parslets/File.html
@@ -1,4 +1,4 @@
-<div>
+<span>
     <image>
         <Source>
             <Scope>Formats/File/img</Scope>
@@ -8,4 +8,4 @@
     </image>
 
     <k>Filename</k> (<k>Filesize</k>)
-</div>
+</span>
