--- a/src/Assets/bootstrap3/css/addons.css
+++ b/src/Assets/bootstrap3/css/addons.css
@@ -95,3 +95,8 @@ a.no-border, .no-border a, a:hover.no-border, .no-border a:hover
         max-width: 2530px;
     }
 }
+
+.navbar .dropdown ul
+{
+    width: 100%;
+}
