--- a/src/Assets/bootstrap3/css/addons.css
+++ b/src/Assets/bootstrap3/css/addons.css
@@ -100,3 +100,13 @@ a.no-border, .no-border a, a:hover.no-border, .no-border a:hover
 {
     width: 100%;
 }
+
+.text-lg
+{
+    font-size: 20px;
+}
+
+.text-sm
+{
+    font-size: 10px;
+}
