--- a/src/Assets/Default/css/Default.css
+++ b/src/Assets/Default/css/Default.css
@@ -115,3 +115,8 @@ tr.Important, td.Important
     background-color: red;
     color: white;
 }
+
+.no-border, .no-border:hover
+{
+    text-decoration: none;
+}
