--- a/src/Assets/bootstrap3/css/addons.css
+++ b/src/Assets/bootstrap3/css/addons.css
@@ -208,6 +208,7 @@ a.no-border, .no-border a, a:hover.no-border, .no-border a:hover
 {
     width: 50%;
     margin: 100px auto;
+    padding: 25px;
     box-shadow: 0 2px 6px gray;
 
 }
