--- a/src/Assets/bootstrap3/css/addons.css
+++ b/src/Assets/bootstrap3/css/addons.css
@@ -43,7 +43,7 @@
 {
     background-color: #f7f7f7;
     border: 1px solid #cccccc;
-    color: #666666 !important;
+    color: #666666;
     margin: 0 2px;
     text-transform: lowercase;
 }
