--- a/src/Assets/bootstrap3/css/addons.css
+++ b/src/Assets/bootstrap3/css/addons.css
@@ -12,10 +12,10 @@
 .table thead
 {
     padding: 10px 15px;
-    border-bottom: 1px solid transparent;
     color: #333333;
-    background-color: #f5f5f5;
+    background-color: #333333;
     border-color: #dddddd;
+    border-bottom: 1px solid transparent;
 }
 
 .table thead a, .table thead a:hover
@@ -50,7 +50,7 @@
 
 .label-tag:hover
 {
-    background-color: #333333;
+    color: #333333;
 }
 
 .label-lg
@@ -96,6 +96,7 @@ a.no-border, .no-border a, a:hover.no-border, .no-border a:hover
 .text-lg
 {
     font-size: 2em !important;
+    line-height: normal;
 }
 
 .text-md
@@ -107,6 +108,13 @@ a.no-border, .no-border a, a:hover.no-border, .no-border a:hover
 .text-sm
 {
     font-size: 0.8em !important;
+    line-height: normal;
+}
+
+.text-xl
+{
+    font-size: 2.5em;
+    line-height: normal;
 }
 
 .navbar-danger
