Performance renaming finished.

--- a/src/Assets/bootstrap3/css/addons.css
+++ b/src/Assets/bootstrap3/css/addons.css
@@ -117,93 +117,6 @@ a.no-border, .no-border a, a:hover.no-border, .no-border a:hover
     line-height: normal;
 }
 
-.navbar-danger
-{
-  color: #ffffff;
-  background-color: #d9534f;
-  border-color: #d43f3a;
-}
-
-.navbar-danger .navbar-brand {
-  color: #ffffff;
-}
-
-.navbar-danger .navbar-brand:hover,
-.navbar-danger .navbar-brand:focus {
-  color: #ffffff;
-  background-color: transparent;
-}
-
-.navbar-danger .navbar-text {
-  color: #ffffff;
-}
-
-.navbar-danger .navbar-nav > li > a {
-  color: #ffffff;
-}
-
-.navbar-danger .navbar-nav > li > a:hover,
-.navbar-danger .navbar-nav > li > a:focus {
-  color: #ffffff;
-  background-color: transparent;
-}
-
-.navbar-danger .navbar-nav > .active > a,
-.navbar-danger .navbar-nav > .active > a:hover,
-.navbar-danger .navbar-nav > .active > a:focus {
-  color: #ffffff;
-  background-color: #080808;
-}
-
-.navbar-danger .navbar-nav > .disabled > a,
-.navbar-danger .navbar-nav > .disabled > a:hover,
-.navbar-danger .navbar-nav > .disabled > a:focus {
-  color: #444444;
-  background-color: transparent;
-}
-
-.navbar-danger .navbar-toggle {
-  border-color: #333333;
-}
-
-.navbar-danger .navbar-toggle:hover,
-.navbar-danger .navbar-toggle:focus {
-  background-color: #333333;
-}
-
-.navbar-danger .navbar-toggle .icon-bar {
-  background-color: #ffffff;
-}
-
-.navbar-danger .navbar-collapse,
-.navbar-danger .navbar-form {
-  border-color: #101010;
-}
-
-.navbar-danger .navbar-nav > .open > a,
-.navbar-danger .navbar-nav > .open > a:hover,
-.navbar-danger .navbar-nav > .open > a:focus {
-  color: #ffffff;
-  background-color: #080808;
-}
-
-.navbar-danger .navbar-nav > .dropdown > a:hover .caret {
-  border-top-color: #ffffff;
-  border-bottom-color: #ffffff;
-}
-
-.navbar-danger .navbar-nav > .dropdown > a .caret {
-  border-top-color: #999999;
-  border-bottom-color: #999999;
-}
-
-.navbar-danger .navbar-nav > .open > a .caret,
-.navbar-danger .navbar-nav > .open > a:hover .caret,
-.navbar-danger .navbar-nav > .open > a:focus .caret {
-  border-top-color: #ffffff;
-  border-bottom-color: #ffffff;
-}
-
 .label-xl
 {
     font-size: 200%;
@@ -250,4 +163,17 @@ a.no-border, .no-border a, a:hover.no-border, .no-border a:hover
     padding: 15px;
     border: 1px solid #d7d7d7;
     border-top: none;
+}
+
+.control-bar
+{
+    top: 40%;
+    right: 0;
+    position: absolute !important;
+    z-index: 99;
+}
+
+.control-bar li a
+{
+    background-color: #ffffff;
 }
