--- a/src/Assets/font-awesome/css/font-awesome.css
+++ b/src/Assets/font-awesome/css/font-awesome.css
@@ -6,8 +6,8 @@
  * -------------------------- */
 @font-face {
   font-family: 'FontAwesome';
-  src: url('/fonts/awesome/fontawesome-webfont.eot?v=4.0.3');
-  src: url('/fonts/awesome/fontawesome-webfont.eot?#iefix&v=4.0.3') format('embedded-opentype'), url('/fonts/awesome/fontawesome-webfont.woff?v=4.0.3') format('woff'), url('/fonts/awesome/fontawesome-webfont.ttf?v=4.0.3') format('truetype'), url('/fonts/awesome/fontawesome-webfont.svg?v=4.0.3#fontawesomeregular') format('svg');
+  src: url('/fonts/awesome/fontawesome-webfont.eot');
+  src: url('/fonts/awesome/fontawesome-webfont.eot') format('embedded-opentype'), url('/fonts/awesome/fontawesome-webfont.woff') format('woff'), url('/fonts/awesome/fontawesome-webfont.ttf') format('truetype'), url('/fonts/awesome/fontawesome-webfont.svg#fontawesomeregular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
