--- a/src/Assets/bootstrap3/css/addons.css
+++ b/src/Assets/bootstrap3/css/addons.css
@@ -12,7 +12,7 @@
 .table thead
 {
     padding: 10px 15px;
-    color: #333333;
+    color: #ffffff;
     background-color: #333333;
     border-color: #dddddd;
     border-bottom: 1px solid transparent;
