--- a/src/Assets/Default/css/Default.css
+++ b/src/Assets/Default/css/Default.css
@@ -151,3 +151,11 @@ td.indent-12 {padding-left: 12em;}
 td.indent-13 {padding-left: 13em;}
 td.indent-14 {padding-left: 14em;}
 td.indent-15 {padding-left: 15em;}
+
+pre {
+ white-space: pre-wrap;       /* css-3 */
+ white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+ white-space: -pre-wrap;      /* Opera 4-6 */
+ white-space: -o-pre-wrap;    /* Opera 7 */
+ word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
