--- a/src/Assets/font-awesome/css/font-awesome.css
+++ b/src/Assets/font-awesome/css/font-awesome.css
@@ -6,8 +6,8 @@
  * -------------------------- */
 @font-face {
   font-family: 'FontAwesome';
-  src: url('/fonts/awesome/fontawesome-webfont.eot?v=4.2.0');
-  src: url('/fonts/awesome/fontawesome-webfont.eot?#iefix&v=4.2.0') format('embedded-opentype'), url('/fonts/awesome/fontawesome-webfont.woff?v=4.2.0') format('woff'), url('/fonts/awesome/fontawesome-webfont.ttf?v=4.2.0') format('truetype'), url('/fonts/awesome/fontawesome-webfont.svg?v=4.2.0#fontawesomeregular') format('svg');
+  src: url('/fonts/awesome/fontawesome-webfont-4.2.0.eot');
+  src: url('/fonts/awesome/fontawesome-webfont-4.2.0.eot#iefix') format('embedded-opentype'), url('/fonts/awesome/fontawesome-webfont-4.2.0.woff') format('woff'), url('/fonts/awesome/fontawesome-webfont-4.2.0.ttf') format('truetype'), url('/fonts/awesome/fontawesome-webfont-4.2.0.svg#fontawesomeregular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
