Logs, profiling, CURL fixes.

--- a/src/Assets/Default/css/Default.css
+++ b/src/Assets/Default/css/Default.css
@@ -11,7 +11,7 @@
     padding: 4px 16px 4px 16px;
     background-color: white;
     color: black;
-    width: auto;
+    width: 85%;
     white-space: pre;
     clear: both;
     border-radius: 6px;
