--- a/src/Assets/typeahead/css/typeahead.css
+++ b/src/Assets/typeahead/css/typeahead.css
@@ -1,21 +1,67 @@
-.twitter-typeahead
+span.twitter-typeahead .tt-dropdown-menu {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 1000;
+    display: none;
+    float: left;
+    min-width: 160px;
+    width: 100%;
+    padding: 5px 0;
+    margin: 2px 0 0;
+    list-style: none;
+    font-size: 14px;
+    text-align: left;
+    background-color: #ffffff;
+    border: 1px solid #cccccc;
+    border: 1px solid rgba(0, 0, 0, 0.15);
+    border-radius: 0;
+    -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+    background-clip: padding-box;
+}
+span.twitter-typeahead .tt-suggestion
 {
+    display: block;
+    padding: 10px;
+    clear: both;
+    font-weight: normal;
+    line-height: 1.42857143;
+    color: #333333;
+    white-space: nowrap;
+}
+span.twitter-typeahead .tt-suggestion:hover,
+span.twitter-typeahead .tt-suggestion:focus {
+    color: #ffffff;
+    text-decoration: none;
+    outline: 0;
+    background-color: #428bca;
+}
+
+span.twitter-typeahead {
     width: 100%;
 }
-
-.tt-dropdown-menu
-{
-    width:                 100%;
-    margin-top:            0;
-    padding:               10px;
-    background-color:      #ffffff;
-    border:                1px solid #cccccc;
-    -webkit-box-shadow:    0 5px 10px rgba(0, 0, 0, .2);
-    -moz-box-shadow:       0 5px 10px rgba(0, 0, 0, .2);
-    box-shadow:            0 5px 10px rgba(0, 0, 0, .2);
+.input-group span.twitter-typeahead {
+    display: block !important;
+}
+.input-group span.twitter-typeahead .tt-dropdown-menu {
+    top: 32px !important;
+}
+.input-group.input-group-lg span.twitter-typeahead .tt-dropdown-menu {
+    top: 44px !important;
+}
+.input-group.input-group-sm span.twitter-typeahead .tt-dropdown-menu {
+    top: 28px !important;
 }
 
-.tt-suggestion
-{
-    border-bottom: 1px solid #cccccc;
+
+.twitter-typeahead {
+    width: 100%;
+    margin-top: 0;
+}
+.tt-dropdown-menu {
+    width: 100%;
+}
+.tt-hint {
+    width: 100%;
 }
