--- a/src/Assets/Default/css/Default.css
+++ b/src/Assets/Default/css/Default.css
@@ -187,3 +187,15 @@ em.highlight
 {
     border: 1px dotted green;
 }
+
+#pixel-perfect
+{
+    display: none;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 999;
+    text-align: center;
+}
