Gamification/Achievement App. Smoozy and IPO support coming soon.

--- a/src/Assets/bootstrap/css/addons.css
+++ b/src/Assets/bootstrap/css/addons.css
@@ -5,7 +5,17 @@
 
 .img-spaced
 {
-    margin: 4px 8px;
+    margin: 0.5em;
+}
+
+.img-hspaced
+{
+    margin: 0 0.5em;
+}
+
+.img-vspaced
+{
+    margin: 0.5em 0;
 }
 
 .img-center
