--- a/src/Assets/typeahead/css/typeahead.css
+++ b/src/Assets/typeahead/css/typeahead.css
@@ -1,67 +1,44 @@
-span.twitter-typeahead .tt-dropdown-menu {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    z-index: 1000;
-    display: none;
-    float: left;
-    min-width: 160px;
-    width: 100%;
-    padding: 5px 0;
-    margin: 2px 0 0;
-    list-style: none;
-    font-size: 14px;
-    text-align: left;
-    background-color: #ffffff;
-    border: 1px solid #cccccc;
-    border: 1px solid rgba(0, 0, 0, 0.15);
-    border-radius: 0;
-    -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
-    background-clip: padding-box;
-}
-span.twitter-typeahead .tt-suggestion
-{
-    display: block;
-    padding: 10px;
-    clear: both;
-    font-weight: normal;
-    line-height: 1.42857143;
-    color: #333333;
-    white-space: nowrap;
-}
-span.twitter-typeahead .tt-suggestion:hover,
-span.twitter-typeahead .tt-suggestion:focus {
-    color: #ffffff;
-    text-decoration: none;
-    outline: 0;
-    background-color: #428bca;
-}
-
+/*===============================================
+  Twitters Typeahead.js
+================================================= */
+/* typeahead wrapper */
 span.twitter-typeahead {
-    width: 100%;
+  width: 100%;
 }
-.input-group span.twitter-typeahead {
-    display: block !important;
+/* dropdown suggestion menu */
+.tt-menu {
+  width: 100%;
+  max-height: 250px;
+  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
+
+  margin-top: 8px;
+  padding: 8px 0;
+
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 5px 10px rgba(0,0,0,.1);
+  -moz-box-shadow: 0 5px 10px rgba(0,0,0,.1);
+   box-shadow: 0 5px 10px rgba(0,0,0,.1);
 }
-.input-group span.twitter-typeahead .tt-dropdown-menu {
-    top: 32px !important;
+/* individual suggestions */
+.tt-suggestion {
+  padding: 2px 12px;
+  font-size: 14px;
+  line-height: 20px;
+  cursor: pointer;
 }
-.input-group.input-group-lg span.twitter-typeahead .tt-dropdown-menu {
-    top: 44px !important;
-}
-.input-group.input-group-sm span.twitter-typeahead .tt-dropdown-menu {
-    top: 28px !important;
+/* active/:hover suggestion */
+.tt-suggestion.tt-cursor {
+  cursor: pointer;
 }
 
-
-.twitter-typeahead {
-    width: 100%;
-    margin-top: 0;
+.tt-hint
+{
+  display: none;
 }
-.tt-dropdown-menu {
-    width: 100%;
-}
-.tt-hint {
-    width: 100%;
+.tt-suggestion p {
+  margin: 2px 0;
 }
