--- a/src/Assets/typeahead/css/typeahead.css
+++ b/src/Assets/typeahead/css/typeahead.css
@@ -2,43 +2,54 @@
   Twitters Typeahead.js
 ================================================= */
 /* typeahead wrapper */
-span.twitter-typeahead {
-  width: 100%;
+span.twitter-typeahead
+{
+    width : 100%;
 }
+
 /* dropdown suggestion menu */
-.tt-menu {
-  width: 100%;
-  max-height: 250px;
-  overflow: hidden;
-  overflow-x: hidden;
-  overflow-y: auto;
+.tt-menu
+{
+    width              : 100%;
+    max-height         : 250px;
+    overflow           : hidden;
+    overflow-x         : hidden;
+    overflow-y         : auto;
 
-  margin-top: 8px;
-  padding: 8px 0;
+    margin-top         : 0;
+    padding            : 0;
 
-  background-color: #fff;
-  border: 1px solid #ccc;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  -webkit-box-shadow: 0 5px 10px rgba(0,0,0,.1);
-  -moz-box-shadow: 0 5px 10px rgba(0,0,0,.1);
-   box-shadow: 0 5px 10px rgba(0,0,0,.1);
+    background-color   : #ffffff;
+    border             : 1px solid #cccccc;
+    border-top         : none;
+    -webkit-box-shadow : 0 5px 10px rgba(0, 0, 0, .1);
+    -moz-box-shadow    : 0 5px 10px rgba(0, 0, 0, .1);
+    box-shadow         : 0 5px 10px rgba(0, 0, 0, .1);
 }
+
 /* individual suggestions */
-.tt-suggestion {
-  padding: 2px 12px;
-  font-size: 14px;
-  line-height: 20px;
-  cursor: pointer;
+.tt-suggestion
+{
+    margin  : 0;
+    padding : 5px 10px;
+    cursor  : pointer;
 }
+
 /* active/:hover suggestion */
-.tt-suggestion.tt-cursor {
-  cursor: pointer;
+.tt-suggestion:hover
+{
+    cursor           : pointer;
+    background-color : #333333;
+    color            : white;
 }
 
 .tt-hint
 {
-  display: none;
+    display : none;
+    color   : #999999;
 }
-.tt-suggestion p {
-  margin: 2px 0;
+
+.tt-suggestion p
+{
+    margin : 2px 0;
 }
