--- a/src/Assets/bootstrap/css/addons.css
+++ b/src/Assets/bootstrap/css/addons.css
@@ -187,6 +187,7 @@ a.no-border, .no-border a, a:hover.no-border, .no-border a:hover
 {
     padding: 15px;
     border: 1px solid #d7d7d7;
+    border-top: none;
 }
 
 .control-bar
@@ -209,4 +210,15 @@ a.no-border, .no-border a, a:hover.no-border, .no-border a:hover
     border: 1px #f0f0f0 solid;
     margin-right: 2px;
     padding-top: 4px;
+}
+
+a.hashtag
+{
+    border-bottom: 1px dotted gray;
+}
+
+a.hashtag:hover
+{
+    border-bottom: 1px dotted black;
+    text-decoration: none;
 }
