--- a/src/Assets/bootstrap/css/addons.css
+++ b/src/Assets/bootstrap/css/addons.css
@@ -194,7 +194,7 @@ a.no-border, .no-border a, a:hover.no-border, .no-border a:hover
 {
     top: 40%;
     right: 0;
-    position: absolute !important;
+    position: fixed !important;
     z-index: 99;
 }
 
