--- a/src/Assets/typeahead/css/typeahead.css
+++ b/src/Assets/typeahead/css/typeahead.css
@@ -5,14 +5,15 @@
 span.twitter-typeahead
 {
     width : 100%;
+    height: 34px;
+    margin-top: 4px;
 }
 
 /* dropdown suggestion menu */
 .tt-menu
 {
-    width              : 100%;
-    max-height         : 250px;
-    overflow           : hidden;
+    width              : 300px;
+    max-height         : 340px;
     overflow-x         : hidden;
     overflow-y         : auto;
 
