--- a/src/Assets/font-awesome-codeine/css/font-awesome-codeine.css
+++ b/src/Assets/font-awesome-codeine/css/font-awesome-codeine.css
@@ -1,7 +1,30 @@
 @font-face {
-  font-family: 'FontAwesome';
-  src: url('/fonts/bower/font-awesome/fontawesome-webfont.eot?v=4.7.0');
-  src: url('/fonts/bower/font-awesome/fontawesome-webfont.eot?#iefix&v=4.7.0') format('embedded-opentype'), url('/fonts/bower/font-awesome/fontawesome-webfont.woff2?v=4.7.0') format('woff2'), url('/fonts/bower/font-awesome/fontawesome-webfont.woff?v=4.7.0') format('woff'), url('/fonts/bower/font-awesome/fontawesome-webfont.ttf?v=4.7.0') format('truetype'), url('/fonts/bower/font-awesome/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular') format('svg');
-  font-weight: normal;
+  font-family: 'Font Awesome 5 Brands';
   font-style: normal;
-}
+  font-weight: normal;
+  src: url("/fonts/bower/Font-Awesome/webfonts/fa-brands-400.eot");
+  src: url("/fonts/bower/Font-Awesome/webfonts/fa-brands-400.eot?#iefix") format("embedded-opentype"), url("/fonts/bower/Font-Awesome/webfonts/fa-brands-400.woff2") format("woff2"), url("/fonts/bower/Font-Awesome/webfonts/fa-brands-400.woff") format("woff"), url("/fonts/bower/Font-Awesome/webfonts/fa-brands-400.ttf") format("truetype"), url("/fonts/bower/Font-Awesome/webfonts/fa-brands-400.svg#fontawesome") format("svg"); }
+
+.fab {
+  font-family: 'Font Awesome 5 Brands'; }
+@font-face {
+  font-family: 'Font Awesome 5 Free';
+  font-style: normal;
+  font-weight: 400;
+  src: url("/fonts/bower/Font-Awesome/webfonts/fa-regular-400.eot");
+  src: url("/fonts/bower/Font-Awesome/webfonts/fa-regular-400.eot?#iefix") format("embedded-opentype"), url("/fonts/bower/Font-Awesome/webfonts/fa-regular-400.woff2") format("woff2"), url("/fonts/bower/Font-Awesome/webfonts/fa-regular-400.woff") format("woff"), url("/fonts/bower/Font-Awesome/webfonts/fa-regular-400.ttf") format("truetype"), url("/fonts/bower/Font-Awesome/webfonts/fa-regular-400.svg#fontawesome") format("svg"); }
+
+.far {
+  font-family: 'Font Awesome 5 Free';
+  font-weight: 400; }
+@font-face {
+  font-family: 'Font Awesome 5 Free';
+  font-style: normal;
+  font-weight: 900;
+  src: url("/fonts/bower/Font-Awesome/webfonts/fa-solid-900.eot");
+  src: url("/fonts/bower/Font-Awesome/webfonts/fa-solid-900.eot?#iefix") format("embedded-opentype"), url("/fonts/bower/Font-Awesome/webfonts/fa-solid-900.woff2") format("woff2"), url("/fonts/bower/Font-Awesome/webfonts/fa-solid-900.woff") format("woff"), url("/fonts/bower/Font-Awesome/webfonts/fa-solid-900.ttf") format("truetype"), url("/fonts/bower/Font-Awesome/webfonts/fa-solid-900.svg#fontawesome") format("svg"); }
+
+.fa,
+.fas {
+  font-family: 'Font Awesome 5 Free';
+  font-weight: 900; }
