--- a/src/Assets/font-awesome-codeine/css/font-awesome-codeine.css
+++ b/src/Assets/font-awesome-codeine/css/font-awesome-codeine.css
@@ -2,6 +2,7 @@
   font-family: 'Font Awesome 5 Brands';
   font-style: normal;
   font-weight: normal;
+  font-display: auto;
   src: url("/fonts/bower/Font-Awesome/webfonts/fa-brands-400.eot");
   src: url("/fonts/bower/Font-Awesome/webfonts/fa-brands-400.eot?#iefix") format("embedded-opentype"), url("/fonts/bower/Font-Awesome/webfonts/fa-brands-400.woff2") format("woff2"), url("/fonts/bower/Font-Awesome/webfonts/fa-brands-400.woff") format("woff"), url("/fonts/bower/Font-Awesome/webfonts/fa-brands-400.ttf") format("truetype"), url("/fonts/bower/Font-Awesome/webfonts/fa-brands-400.svg#fontawesome") format("svg"); }
 
@@ -11,6 +12,7 @@
   font-family: 'Font Awesome 5 Free';
   font-style: normal;
   font-weight: 400;
+  font-display: auto;
   src: url("/fonts/bower/Font-Awesome/webfonts/fa-regular-400.eot");
   src: url("/fonts/bower/Font-Awesome/webfonts/fa-regular-400.eot?#iefix") format("embedded-opentype"), url("/fonts/bower/Font-Awesome/webfonts/fa-regular-400.woff2") format("woff2"), url("/fonts/bower/Font-Awesome/webfonts/fa-regular-400.woff") format("woff"), url("/fonts/bower/Font-Awesome/webfonts/fa-regular-400.ttf") format("truetype"), url("/fonts/bower/Font-Awesome/webfonts/fa-regular-400.svg#fontawesome") format("svg"); }
 
@@ -21,6 +23,7 @@
   font-family: 'Font Awesome 5 Free';
   font-style: normal;
   font-weight: 900;
+  font-display: auto;
   src: url("/fonts/bower/Font-Awesome/webfonts/fa-solid-900.eot");
   src: url("/fonts/bower/Font-Awesome/webfonts/fa-solid-900.eot?#iefix") format("embedded-opentype"), url("/fonts/bower/Font-Awesome/webfonts/fa-solid-900.woff2") format("woff2"), url("/fonts/bower/Font-Awesome/webfonts/fa-solid-900.woff") format("woff"), url("/fonts/bower/Font-Awesome/webfonts/fa-solid-900.ttf") format("truetype"), url("/fonts/bower/Font-Awesome/webfonts/fa-solid-900.svg#fontawesome") format("svg"); }
 
